# gwbackupy

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev-requirements.txt  lcov-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  run-requirements.txt  setup.py  test-requirements.txt
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml  coverage-lcov.yml  publish-pypi.yml  pytest.yml
docs/: cli-parameters.md  enable-gcp-apis.md  oauth-setup.md  register-to-gcp.md  service-account-setup.md
gwb/: global_properties.py  gmail.py  gwbackupy.py  helpers.py  storage_descriptor.py
gwb/filters/: filter_interface.py  gmail_filter.py
gwb/storage/: file_storage.py  storage_interface.py
gwbackupy/: __main__.py  adaptive_batch_controller.py  global_properties.py  gmail.py  gwbackupy.py  gwbackupy_cli.py  helpers.py  people.py  process_helpers.py
gwbackupy/cli/: gmail_cli.py  gwbackupy_cli.py  peoples_cli.py
gwbackupy/filters/: filter_interface.py  gmail_filter.py
gwbackupy/providers/: contacts_service_provider.py  contacts_service_wrapper_interface.py  gapi_contacts_service_wrapper.py  gapi_gmail_service_wrapper.py  gapi_people_service_wrapper.py  gapi_service_provider.py  gmail_service_provider.py  gmail_service_wrapper_interface.py  google_api_service_provider.py  people_service_provider.py  people_service_wrapper_interface.py  service_provider_interface.py
gwbackupy/storage/: file_storage.py  storage_interface.py
gwbackupy/tests/: helpers.py  mock_gmail_service_wrapper.py  mock_not_impleneted_storage_interface.py  mock_service_provider.py  mock_storage.py  test_adaptive_batch_controller.py  test_file_storage.py  test_gmail.py  test_gmail.yml  test_gmail_filter.py  test_helpers.py  test_mock_gmail_service_wrapper.py  test_mock_service_provider.py  test_process_helpers.py  test_storage_interface.py
scripts/: gwbackupy
