[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwbackupy"
dynamic = ["version"]
description = "Open source Google Workspace backup solution."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Márton Somogyi", email = "info@smarton.dev"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Environment :: Console",
    "Programming Language :: Python",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = []  # Add your dependencies here or use dynamic dependencies

[project.urls]
"Homepage" = "https://github.com/smartondev/gwbackupy"

[project.scripts]
gwbackupy = "gwbackupy:main"

[tool.setuptools.dynamic]
version = {attr = "gwbackupy.__version__"}